--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11198,17 +11198,17 @@ table th {
 .btn.btn-primariey {
   padding: 15px 12px 15px 12px;
   border-radius: 5px;
-  background-color: #f86168;
+  background-color: #ce878a;
 }
 
 @media only screen and (min-width: 991px) {
   .btn.btn-primariey {
-    padding: 18px 16px 18px 16px;
+    padding: 10px 15px 10px 15px;
   }
 }
 
 .btn.btn-primariey:hover {
-  background-color: #d670a4;
+  background-color: #ce5358;
   color: #fff;
 }
 
@@ -11389,6 +11389,7 @@ table th {
 }
 
 .nav-item {
+  margin-left: 2.5rem;
   position: relative;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -11638,6 +11639,11 @@ table th {
   color: #fff;
 }
 
+.banner-slider .inner-box .bannar-text .btn-primariey {
+  background-color: #f86168;
+  padding: 16px 16px;
+}
+
 @media only screen and (min-width: 991px) {
   .banner-slider .inner-box .bannar-text {
     padding-top: 110px;
@@ -11698,6 +11704,15 @@ table th {
 
 .title_box .h2 span {
   color: #f86168;
+}
+
+@media only screen and (min-width: 991px) {
+  .title_box {
+    padding-bottom: 20px;
+  }
+  .title_box .h2 {
+    font-size: 35px;
+  }
 }
 
 .service-part {
@@ -11772,8 +11787,13 @@ table th {
 .counter-info span {
   color: #fff;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 22px;
   font-family: "Ubuntu", sans-serif;
+}
+
+.counter-info .icon {
+  font-size: 22px;
+  padding-right: 15px;
 }
 
 /* ------------------- start car sections -----------------*/
@@ -11875,7 +11895,7 @@ table th {
   width: 144px;
   height: 144px;
   border-radius: 50%;
-  border: 8px solid #fff;
+  border: 8px solid #d4ebe2;
   overflow: hidden;
 }
 
@@ -11907,7 +11927,7 @@ table th {
 .quoter .swiper-slide .inner-text .infor .para {
   margin-bottom: 25px;
   font-size: 16px;
-  color: #000;
+  color: #50658e;
 }
 
 .quoter .swiper-slide .inner-text .infor .h5 {
@@ -11949,9 +11969,12 @@ footer {
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
+}
+
+footer .bg-color-rgb {
+  background-color: #282a6340;
   padding-top: 20px;
   padding-bottom: 23px;
-  background-color: #282a6340;
 }
 
 @media only screen and (min-width: 991px) {
@@ -11968,13 +11991,13 @@ footer {
 
 footer .para-cover p {
   font-size: 16px;
-  color: #50658e;
+  color: #fff;
 }
 
 footer .list .h6 {
   font-weight: 700;
   font-size: 20px;
-  color: #50658e;
+  color: #fff;
 }
 
 @media only screen and (min-width: 991px) {
@@ -11985,18 +12008,19 @@ footer .list .h6 {
 
 footer .list li a {
   font-size: 14px;
-  color: #50658e;
+  color: #fff;
 }
 
 footer .list li a:hover {
   text-decoration: underline;
+  color: #fff;
 }
 
 footer .address .h6 {
   font-weight: 700;
   font-weight: 700;
   font-size: 20px;
-  color: #50658e;
+  color: #fff;
 }
 
 footer .address ul {
@@ -12012,23 +12036,24 @@ footer .address ul {
 footer .address ul li,
 footer .address ul a {
   font-size: 14px;
-  color: #50658e;
+  color: #fff;
 }
 
 footer .address ul a:hover {
   text-decoration: underline;
+  color: #fff;
 }
 
 footer .copyright {
   font-size: 14px;
-  color: #646464;
+  color: #fff;
   margin-bottom: 0px;
 }
 
 footer .social-icon li {
-  width: 24px;
-  height: 24px;
-  background-color: #646464;
+  width: 26px;
+  height: 26px;
+  color: #fff;
   border-radius: 50%;
   margin-left: 16px;
   display: -webkit-box;
@@ -12040,6 +12065,7 @@ footer .social-icon li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #a5637a;
 }
 
 footer .social-icon li a {
