--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -375,17 +375,19 @@ table {
 }
 
 $btn_backcolor:#0DC6F6;
+$btn-color:#ce878a;
+$btn-hover-color:#ce5358;
 .btn {
     &.btn-primariey {
         padding: 15px 12px 15px 12px;
         @include minwidth(991px) {
-            padding: 18px 16px 18px 16px;
+            padding: 10px 15px 10px 15px;
         }
         border-radius: 5px;
-        background-color: $red-color;
+        background-color: $btn-color;
     }
     &.btn-primariey:hover {
-        background-color: #d670a4;
+        background-color: $btn-hover-color;
         color: $white-color;
     }
     &.btn-seconday {
@@ -558,6 +560,7 @@ $btn_backcolor:#0DC6F6;
 }
 
 .nav-item {
+    margin-left: 2.5rem;
     &:hover {
         .nav-link {
             color: #8167a9 !important;
@@ -778,6 +781,10 @@ $btn_backcolor:#0DC6F6;
                 margin-bottom: 30px;
                 color: $white-color;
             }
+            .btn-primariey {
+                background-color: $red-color;
+                padding: 16px 16px;
+            }
             @include minwidth(991px) {
                 padding-top: 110px;
                 padding-bottom: 165px;
@@ -830,6 +837,12 @@ $btn_backcolor:#0DC6F6;
             color: $red-color;
         }
     }
+    @include minwidth(991px) {
+        padding-bottom: 20px;
+        .h2 {
+            font-size: 35px;
+        }
+    }
 }
 
 .service-part {
@@ -841,9 +854,6 @@ $btn_backcolor:#0DC6F6;
         .pad-l {
             padding-left: 30px;
         }
-    }
-    .inner-box {
-        // box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
     }
     .img-camber {
         img {
@@ -895,8 +905,12 @@ $btn_backcolor:#0DC6F6;
     span {
         color: $white-color;
         font-weight: 500;
-        font-size: 18px;
+        font-size: 22px;
         font-family: $primary-font;
+    }
+    .icon {
+        font-size: 22px;
+        padding-right: 15px;
     }
 }
 
@@ -989,7 +1003,7 @@ $bg-thard-color:#f0f8ff;
                 width: 144px;
                 height: 144px;
                 border-radius: 50%;
-                border: 8px solid $white-color;
+                border: 8px solid #d4ebe2;
                 overflow: hidden;
                 img {
                     width: 100%;
@@ -1011,7 +1025,7 @@ $bg-thard-color:#f0f8ff;
                 .para {
                     margin-bottom: 25px;
                     font-size: 16px;
-                    color: $black-color;
+                    color: $primary-text-color;
                 }
                 .h5 {
                     font-size: 16px;
@@ -1052,9 +1066,11 @@ footer {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    padding-top: 20px;
-    padding-bottom: 23px;
-    background-color: #282a6340;
+    .bg-color-rgb {
+        background-color: #282a6340;
+        padding-top: 20px;
+        padding-bottom: 23px;
+    }
     @include minwidth(991px) {
         padding-top: 46px;
     }
@@ -1064,14 +1080,14 @@ footer {
         }
         p {
             font-size: 16px;
-            color: $primary-text-color;
+            color: $white-color;
         }
     }
     .list {
         .h6 {
             font-weight: $bold;
             font-size: 20px;
-            color: $primary-text-color;
+            color: $white-color;
         }
         li {
             @include minwidth(991px) {
@@ -1079,10 +1095,11 @@ footer {
             }
             a {
                 font-size: 14px;
-                color: $primary-text-color;
+                color: $white-color;
             }
             a:hover {
                 text-decoration: underline;
+                color: $white-color;
             }
         }
     }
@@ -1091,7 +1108,7 @@ footer {
             font-weight: $bold;
             font-weight: 700;
             font-size: 20px;
-            color: $primary-text-color;
+            color: $white-color;
         }
         ul {
             padding-top: 15px;
@@ -1101,28 +1118,30 @@ footer {
             li,
             a {
                 font-size: 14px;
-                color: $primary-text-color;
+                color: $white-color;
             }
             a:hover {
                 text-decoration: underline;
+                color: $white-color;
             }
         }
     }
     .copyright {
         font-size: 14px;
-        color: $gray-text-color;
+        color: $white-color;
         margin-bottom: 0px;
     }
     .social-icon {
         li {
-            width: 24px;
-            height: 24px;
-            background-color: $gray-text-color;
+            width: 26px;
+            height: 26px;
+            color: $white-color;
             border-radius: 50%;
             margin-left: 16px;
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: #a5637a;
             a {
                 width: 100%;
                 text-align: center;
