--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10985,10 +10985,6 @@ table:not(:last-child) {
   }
 }
 
-li:not(:last-child) {
-  margin-bottom: 6px;
-}
-
 h1,
 .h1,
 h2,
@@ -11535,7 +11531,7 @@ table th {
     content: "";
     border: none;
     background-color: #000;
-    vertical-align: 0;
+    vertical-align: 0px;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
   }
@@ -12121,6 +12117,124 @@ table th {
 }
 
 /* ------------------- Bangladesh Private Hospital ------------*/
+/* ------------------- Blog Page  ------------*/
+.blog-catagory {
+  padding: 100px 0px;
+}
+
+.blog-catagory .title .h3 {
+  color: #50658e;
+  position: relative;
+  padding-left: 25px;
+}
+
+.blog-catagory .title .h3::before {
+  content: "";
+  display: block;
+  width: 17px;
+  height: 17px;
+  background: #CD5C5C;
+  left: 0px;
+  top: 7px;
+  position: absolute;
+}
+
+.blog-catagory .list-group .list-group-item {
+  border-top: 0px;
+  border-right: 0px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  border-left: 0px;
+  padding: 10px 10px 10px 5px;
+}
+
+.blog-catagory .list-group .list-group-item.active {
+  z-index: 2;
+  color: #fff;
+  background-color: #f86168;
+  border-color: #50658e;
+}
+
+.blog-catagory .cards {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.blog-catagory .cards .image_camber img {
+  width: 100%;
+  height: auto;
+}
+
+.blog-catagory .cards .text-camber .month {
+  background: #50658e;
+  padding: 5px 10px;
+}
+
+.blog-catagory .cards .text-camber .month span {
+  color: #fff;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.blog-catagory .cards .text-camber .day {
+  padding: 5px 10px;
+  background: #f0f8ff;
+}
+
+.blog-catagory .cards .text-camber .day span {
+  color: #50658e;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.blog-catagory .cards .text-camber .title h5 {
+  font-size: 16px;
+  color: #50658e;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.blog-catagory .cards .text-camber .para {
+  color: #50658e;
+}
+
+.blog-catagory .cards .text-camber .para a {
+  color: #ce878a;
+  text-decoration: underline;
+}
+
+.blog-catagory .cards .text-camber .comment {
+  color: #646464;
+}
+
+@media only screen and (min-width: 991px) {
+  .blog-catagory .cards .text-camber .title .h5 {
+    font-size: 20px;
+  }
+}
+
+/* ------------------- start footer sections -----------------*/
+.blog_post_dtl {
+  padding-top: 70px;
+  padding-bottom: 100px;
+}
+
+.blog_post_dtl .imgs img {
+  width: 100%;
+  border-radius: 6px;
+}
+
+.blog_post_dtl .post_text {
+  width: 100%;
+  margin: auto;
+  color: #50658e;
+}
+
+.blog_post_dtl .post_text img {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
+  .blog_post_dtl .post_text {
+    width: 75%;
+  }
+}
+
 /* ------------------- start footer sections -----------------*/
 ul {
   margin: 0px;
