--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -646,16 +646,19 @@ $btn-hover-color:#ce5358;
 
 .dropdown-item {
     padding: 3px 15px;
-    color: #212121;
+    color: $primary-text-color;
     border-radius: 2px;
     transition: all 200ms linear;
+    font-size: 16px;
+    font-family: $primary-font;
+    text-transform: uppercase!important;
     &:hover {
         color: #fff;
-        background-color: rgba(129, 103, 169, .6);
+        background-color: $greenlight;
     }
     &:focus {
         color: #fff;
-        background-color: rgba(129, 103, 169, .6);
+        background-color: $greenlight;
     }
 }
 
