--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,12 @@ $bg-secondary: #9b191900;
     }
 }
 
+@mixin background_img {
+    background-repeat: no-repeat;
+    background: center center;
+    background-size: cover;
+}
+
 
 /* ------------------------body css --------------------------- */
 
@@ -1483,6 +1489,39 @@ $white_light:#f0f8ff;
         p {
             color: $primary-text-color;
         }
+    }
+}
+
+
+/* ------------------- start footer sections -----------------*/
+
+.blood_list {
+    @include background_img;
+    transition: 0.3ms all;
+    .main_div {
+        padding: 50px 0px;
+        @include minwidth(991px) {
+            padding: 100px 0px;
+        }
+    }
+    .blood_card {
+        background: $bg-thard-color;
+        padding: 20px;
+        i {
+            font-size: 50px;
+            color: $red-color;
+        }
+        .h3 {
+            font-family: $primary-font;
+            color: $primary-text-color;
+            font-size: 38px;
+            padding: 0px;
+            margin: 0px;
+        }
+    }
+    .blood_card:hover i {
+        transition: all 0.4s;
+        color: $btn-hover-color;
     }
 }
 
